--- a/scripts/nginx/docker.nginx.conf
+++ b/scripts/nginx/docker.nginx.conf
@@ -3,7 +3,7 @@ events {
 }
 
 http {
-
+  resolver 127.0.0.11 ipv6=off;
   server {
     listen       8888;
     server_name  localhost;
@@ -22,6 +22,18 @@ http {
     location /identity/ {
       set $identityms http://identity-ms:2021;
       proxy_pass $identityms;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_cache_bypass $http_upgrade;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /provisioner/ {
+      set $provisionerms http://provisioner-ms:2020;
+      proxy_pass $provisionerms;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
